Added the changes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <div class="shape">
-        <div class="circle"></div>
-        <div class="circle"></div>
+        <div class="circle" id="round1"></div>
+        <div class="circle" id="round2"></div>
     </div>
 
     <div class="container">
